# vibe-trade-lean

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.service  Dockerfile.service.workspace  Makefile  README.md  docker-compose.parallel.yml  docker-compose.test.yml  pyproject.toml
.github/workflows/: build.yml
csproj/: CustomDataFillModel.csproj  PubSubDataQueueHandler.csproj
data/symbol-properties/: symbol-properties-database.csv
docs/plans/: 2026-01-26-phase6-typed-value-resolution.md  2026-01-29-execution-layer-typing.md
scripts/: data_loader.py  data_loader_base.py  entrypoint.sh  export_to_lean.py  synthetic_data_loader.py
src/: run_backtest.py  serve_backtest.py  strategy_runtime.py
src/Algorithms/: StrategyRuntime.py  statistics_extraction.py  typed_conditions.py
src/DataFeeds/: PubSubDataQueueHandler.cs
src/FillModels/: CustomDataFillModel.cs
src/data/: __init__.py  aggregator.py  fetcher.py  lean_export.py  models.py
test/: Dockerfile  README.md  algorithm.py  config-backtest.json  config.json  generate_synthetic_data.py  publish-integration-test.sh  publish-messages.sh  quick-test.sh  run-test.sh  seed-emulator.sh  strategy_algorithm.py  test-real.sh  test-with-gcp.sh  test_archetype_coverage.py  test_data_loader_format.py  test_e2e.py  test_lean_strategies.py  test_trend_pullback_e2e.py  verify_results.py
tests/: __init__.py  test_backtest_endpoint.py  test_csv_export.py  test_endpoint.py  test_engine_features.py  test_models.py  test_typed_pipeline_guards.py
vibe_trade_lean.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+58 files in other folders)
